[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relayx-app-sdk"
version = "0.1.0"
description = "RelayX App SDK for Python"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "nats-py>=2.9.0",
    "msgpack>=1.0.0",
    "nkeys==0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
